--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -20,12 +20,12 @@
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
-  --vt-c-violet: #99337a;
+  --vt-c-purply-blue: #746CC0;
 }
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-violet);
+  --color-background: var(--vt-c-purply-blue);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
 
@@ -40,7 +40,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-background: var(--vt-c-black);
+    --color-background: var(--vt-c-purply-blue);
     --color-background-soft: var(--vt-c-black-soft);
     --color-background-mute: var(--vt-c-black-mute);
 
